[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
argh = "0.1"
socket2 = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"


